# ImagesConverter

./: .gitignore  README.md  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
scripts/: gen_icons.py  sign-release.ps1
src/: gui.py  image_processing.py  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  commands.rs  lib.rs  main.rs
src-tauri/src/engine/: compress.rs  decode.rs  encode.rs  matting.rs  mod.rs  strip.rs
src-tauri/tests/: engine.rs
ui/: index.html  main.js  styles.css
