[package]
name = "imagesconverter"
version = "2.0.0"
description = "Convert, compress and clean metadata from images"
authors = ["Loïc Morel"]
edition = "2021"

[lib]
name = "imagesconverter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
webp = { version = "0.3", default-features = false }
imagequant = "4"
rgb = "0.8"
png = "0.17"
kamadak-exif = "0.6"
rayon = "1"
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray", "half"] }
ndarray = "0.16"
half = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
base64 = "0.22"

[dev-dependencies]
crc32fast = "1"

# Image work must stay fast even in dev/test builds.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
